Do not detect anything with a '.' as a NetworkLocation

One can also uses a decimal point in a calculator.

BUG: 340140
REVIEW: 121201
FIXED-IN: 5.6